err/django-uploadstatic.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_uploadstatic-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/uploadstatic'...
Listing './lib/python3.5/site-packages/uploadstatic/management'...
Listing './lib/python3.5/site-packages/uploadstatic/management/commands'...
Listing './lib/python3.5/site-packages/uploadstatic/tests'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/apps'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/apps/test'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/apps/test/otherdir'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/apps/test/static'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/apps/test/static/test'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/documents'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/documents/cached'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/documents/cached/css'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/documents/cached/css/fonts'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/documents/cached/css/img'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/documents/cached/img'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/documents/ignored'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/documents/subdir'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/documents/test'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/prefixed'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/site_media'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/site_media/media'...
Listing './lib/python3.5/site-packages/uploadstatic/tests/project/templates'...
Compiling './lib/python3.5/site-packages/uploadstatic/tests/tests.py'...
***   File "./lib/python3.5/site-packages/uploadstatic/tests/tests.py", line 215
    except IndexError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uploadstatic/tests/urls'...
Listing './share'...
Listing './share/python-wheels'...
